Expand timetable people box to avoid line wrapping
사용자가 대여 희망 색상으로 어두운 계열 색상을 세 가지 모두로
선택할 경우 가로 길이가 모자라서 두 줄로 보이는 현상이 있습니다.
박스 길이를 20픽셀 늘려 이 문제를 해결합니다.

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -506,7 +506,7 @@ $opencloset-darken-yellow: desaturate(darken($opencloset-yellow, 4%), 10%);
         .timetable-people {
             min-height: 215px;
             .people-box {
-                width: 240px;
+                width: 260px;
                 min-height: 1px;
                 padding-left: 12px;
                 padding-right: 12px;
